--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <h2> Contact Info</h2>
 
             <ul>
-                <li><strong>Email:</strong> <a href=" franklin.cfg@gmail.com ">franklin.cfg@gmail.com</a> </li> 
-                <li><strong>Github:</strong> <a href=" fwilbor@github.com ">fwilbor@github.com</a> </li> 
+                <li><strong>Email:</strong> <a href="franklin.cfg@gmail.com">franklin.cfg@gmail.com</a> </li> 
+                <li><strong>Github:</strong> <a href="https://github.com/fwilbor">fwilbor@github.com</a> </li> 
                 <li><strong>Portfolio:</strong> <a href= "#ComingSoon">Coming Soon!</a></li>
             </ul>
     	</section>
