--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
 	<title>My Portfolio</title>
 	<!-- Linking CSS -->
+	<link rel="stylesheet" type="text/css" href=style.css>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	
 </head>
@@ -20,7 +21,7 @@
 			<ul>
 				<li class="border"><a href="index.html">About</a></li>
 				<li class="border"><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li class="border"> <a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</div>
