--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
 	<title>My Portfolio</title>
 	<!-- Linking CSS -->
-	<link rel="stylesheet" type="text/css" href=style.css>
+	<link rel="stylesheet" type="text/css" href="assets/css/">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	
 </head>
@@ -15,22 +15,23 @@
 <body>
 
 	<div class="header-container">
-		<header>Franklin Wilborn</header>
-
+		<header>
+			<h1>Franklin Wilborn</h1>
 		<nav>
 			<ul>
-				<li class="border"><a href="index.html">About</a></li>
-				<li class="border"><a href="portfolio.html">Portfolio</a></li>
-				<li class="border"> <a href="contact.html">Contact</a></li>
+				<li class="border" id="about"><a href="index.html">About</a></li>
+				<li class="border" id="portfolio"><a href="portfolio.html">Portfolio</a></li>
+				<li class="border" id="contact"> <a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
+		</header>
 	</div>
 	
 
 	<div class="main-container">
 		<section id="main-bio">
 			<h2>About Me</h2>
-			<img id="bio-image" src="" alt="Franklin Wilborn">
+			<img id="bio-image" src="https://scontent.fatl1-2.fna.fbcdn.net/v/t1.0-9/10441524_10203730210753092_11146941863714294_n.jpg?_nc_cat=101&_nc_oc=AQkSUzvv8lrfcloHl5XGUtjbi3BHRuiDm7ulnC99HgE1YcA_9Yg3owNxvbG2voRN88kNqWqNuMlqGPjM3U6Hzrd8&_nc_ht=scontent.fatl1-2.fna&oh=751fe376dd892093a512297bb5587225&oe=5D521560" alt="Franklin Wilborn">
 			<p>
 				Franklin Wilborn Founded ConsumeSmarter in 2009 with a Vision of Empowering Consumers with Online Spend Management Tools.  He currently oversees the day to day operations and development of ConsumeSmarter.
          Franklin holds a B.S. in Economics with a concentration in Finance from Emory University. His Interest include, Computer Programming, Spending Time with Family & Friends, and Showing his Beloved World-Class Rottweilers.  Franklin is from Olympia Fields, Illinois.
