--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-	<div class="head container">
+	<div id="header">
 		<header>
 			<h1>Franklin Wilborn</h1>
 		<nav>
@@ -28,17 +28,22 @@
 	</div>
 	
 
-	<div class="main-container">
+	
 		<section id="main-bio">
+
+			<div id="main">
 			<h2>About Me</h2>
 			<img id="bio-image" src="https://scontent.fatl1-2.fna.fbcdn.net/v/t1.0-9/10441524_10203730210753092_11146941863714294_n.jpg?_nc_cat=101&_nc_oc=AQkSUzvv8lrfcloHl5XGUtjbi3BHRuiDm7ulnC99HgE1YcA_9Yg3owNxvbG2voRN88kNqWqNuMlqGPjM3U6Hzrd8&_nc_ht=scontent.fatl1-2.fna&oh=751fe376dd892093a512297bb5587225&oe=5D521560" alt="Franklin Wilborn">
 			<p>
 				Franklin Wilborn Founded ConsumeSmarter in 2009 with a Vision of Empowering Consumers with Online Spend Management Tools.  He currently oversees the day to day operations and development of ConsumeSmarter.
          Franklin holds a B.S. in Economics with a concentration in Finance from Emory University. His Interest include, Computer Programming, Spending Time with Family & Friends, and Showing his Beloved World-Class Rottweilers.  Franklin is from Olympia Fields, Illinois.
 			</p>
-    	</section>
+		</div>
+		</section>
+		
+		<div>
 
-    	<section id="social-links">
+    	<section id="contacts">
             <h2> Contact Info</h2>
 
             <ul>
