Add Border Image and Nav Links Inline

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 <body>
 
-	<div id="header">
-		<header>
+	<div>
+		<header id=header>
 			<h1>Franklin Wilborn</h1>
 		<nav>
-			<ul>
-				<li class="border" id="about"><a href="index.html">About</a></li>
-				<li class="border" id="portfolio"><a href="portfolio.html">Portfolio</a></li>
-				<li class="border" id="contact"> <a href="contact.html">Contact</a></li>
-			</ul>
+			
+				<a class="border" id="about"><a href="index.html">About</a>
+				<a class="border" id="portfolio"><a href="portfolio.html">Portfolio</a>
+				<a class="border" id="contact"> <a href="contact.html">Contact</a>
+
 		</nav>
 		</header>
 	</div>
@@ -35,7 +35,7 @@
 			<h2>About Me</h2>
 			<img id="bio-image" src="https://scontent.fatl1-2.fna.fbcdn.net/v/t1.0-9/10441524_10203730210753092_11146941863714294_n.jpg?_nc_cat=101&_nc_oc=AQkSUzvv8lrfcloHl5XGUtjbi3BHRuiDm7ulnC99HgE1YcA_9Yg3owNxvbG2voRN88kNqWqNuMlqGPjM3U6Hzrd8&_nc_ht=scontent.fatl1-2.fna&oh=751fe376dd892093a512297bb5587225&oe=5D521560" alt="Franklin Wilborn">
 			<p>
-				Franklin Wilborn Founded ConsumeSmarter in 2009 with a Vision of Empowering Consumers with Online Spend Management Tools.  He currently oversees the day to day operations and development of ConsumeSmarter.
+				Franklin Wilborn Founded <strong>ConsumeSmarter</strong> in 2009 with a Vision of Empowering Consumers with Online Spend Management Tools.  He currently oversees the day to day operations and development of ConsumeSmarter.
          Franklin holds a B.S. in Economics with a concentration in Finance from Emory University. His Interest include, Computer Programming, Spending Time with Family & Friends, and Showing his Beloved World-Class Rottweilers.  Franklin is from Olympia Fields, Illinois.
 			</p>
 		</div>
@@ -54,6 +54,6 @@
     	</section>
 	</div>
 
-	<footer>&#64; Copyright 2019 Franklin Wilborn</footer>
+	<footer id="footer">&#64; Copyright 2019 Franklin Wilborn</footer>
 </body>
 </html>
