added images to asset file and deletions of unnecessary code

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<h1>Franklin Wilborn</h1>
 		<nav>
 			
-				<a class="border" id="about"><a href="index.html">About</a>
-				<a class="border" id="portfolio"><a href="portfolio.html">Portfolio</a>
-				<a class="border" id="contact"> <a href="contact.html">Contact</a>
+				<a class="links" id="about"><a href="index.html">About</a>
+				<a class="links" id="portfolio"><a href="portfolio.html">Portfolio</a>
+				<a class="links" id="contact"> <a href="contact.html">Contact</a>
 
 		</nav>
 		</header>
