set content aread fixed at 960px, set margin to auto both sides

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	
 </head>
 
+<div id="allcontent">
 <body>
 
 	<div>
@@ -55,5 +56,6 @@
 	</div>
 
 	<footer id="footer">&#64; Copyright 2019 Franklin Wilborn</footer>
+</div>
 </body>
 </html>
