add border-box syntax to html

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                   <textarea id="msg" name="user_message" placeholder="I Love Messages, Contact Me"></textarea>
                 </div>
 
-                <input type="submit" value="Submit">
+                <input id="submit" type="submit" value="Submit">
               </form>
 
               </div>
