added better dimensions for message box and hover and focus element

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,8 @@
             <h2>Contact</h2>
 
             <hr>
+            <br>
+            <br>
 
             </div>
 
@@ -39,21 +41,23 @@
             <form action="franklin.cfg@gmail.com" method="post">
                 <div class="contact">
                   <label for="name">Name:</label>
-                  <input type="text" id="name" name="Your Name" placeholder="Your Name">
+                  <input type="text" id="name" name="Your Name" autofocus placeholder="Your Name">
                 </div>
                 <div>
                   <label for="mail">E-mail:</label> 
-                  <input type="email" id="mail" name="user_email" placeholder="Your Email Here">
+                  <input type="email" id="mail" name="user_email" autofocus placeholder="Your Email Here">
                 </div>
                 <div>
                   <label for="msg">Message:</label>
-                  <textarea id="msg" name="user_message" placeholder="I Love Messages, Contact Me"></textarea>
+                  <textarea id="msg" style="resize: none" name="user_message" placeholder="I Love Messages, Contact Me"></textarea>
                 </div>
 
                 <input id="submit" type="submit" value="Submit">
               </form>
 
               </div>
+
+              <footer>Copyright 2019 Franklin Wilborn</footer>
 
         
         <script src="" async defer></script>
