changes made to portfolio Gallery Tabs will be added in possible Floats?

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,18 +29,18 @@
 
                     <hr>
 
-                    <img id="cs1" src="assets/images/CS1.jpg">
+                    <img id="cs1" src="assets/images/CS1.jpg" width="40%" height="40%">
 
-                    <img id="cs2" src="assets/images/CS2.jpg">
+                    <img id="cs2" src="assets/images/CS2.jpg" width=40% height="40%">
 
-                    <img id="MyLove1" src="assets/images/MyLove1.jpg">
+                    <img id="MyLove1" src="assets/images/MyLove1.jpg" width="43%" height="43%">
 <div>
     
-                    <img id="show1" src="assets/images/Show1.jpg">
+                    <img id="show1" src="assets/images/Show1.jpg" width="60%" height="80%">
 
-                    <img id="show2" src="assets/images/show2.jpg">
+                    <img id="show2" src="assets/images/show2.jpg" width="43%" height="43%">
 
-                    <img id="show3" src="assets/images/show3.jpg">
+                    <img id="show3" src="assets/images/show3.jpg" width="43%"height="43%"> 
 
 </div>
                     
