update img sizing

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,14 @@
                     <h2>Portfolio</h2>
 
                     <hr>
-
+                    <div>
                     <img id="cs1" src="assets/images/CS1.jpg" width="40%" height="40%">
 
                     <img id="cs2" src="assets/images/CS2.jpg" width=40% height="40%">
-
+                    </div>        
+                    <div>
                     <img id="MyLove1" src="assets/images/MyLove1.jpg" width="43%" height="43%">
-<div>
+                    </div>
     
                     <img id="show1" src="assets/images/Show1.jpg" width="60%" height="80%">
 
@@ -45,7 +46,7 @@
 </div>
                     
 
-                <footer>Copyright 2019 Franklin Wilborn</footer>
+                <footer>@ Copyright 2019 Franklin Wilborn</footer>
 
 
 
