Updating CSS Style Chages and Cleaner Syntax

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
               </div>
 
-              <footer>@ Copyright 2019 Franklin Wilborn</footer>
+              <footer>&#169; Copyright 2019 Franklin Wilborn</footer>
 
         
         <script src="" async defer></script>
