--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,8 @@
                     <h2>Portfolio</h2>
 
                     <hr>
+
+                    <h3><em>Discovering a New World</em></h3>
                     <div>
                     <img id="cs1" src="assets/images/CS1.jpg" width="40%" height="40%">
 
@@ -36,6 +38,7 @@
                     <div>
                     <img id="MyLove1" src="assets/images/MyLove1.jpg" width="43%" height="43%">
                     </div>
+                    <p><em>My favorite things in life don't cost any money. It's really clear that the most precious resource we all have is time. ~ Steve Jobs</em></p>
     
                     <img id="show1" src="assets/images/Show1.jpg" width="60%" height="80%">
 
@@ -46,7 +49,7 @@
 </div>
                     
 
-                <footer>@ Copyright 2019 Franklin Wilborn</footer>
+                <footer>&#169; Copyright 2019 Franklin Wilborn</footer>
 
 
 
