--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 </div>
                 <div>
                   <label for="msg">Message:</label>
-                  <textarea id="msg" style="resize: none" name="user_message" placeholder="I Love Messages, Contact Me"></textarea>
+                  <textarea id="msg" style="resize: none" name="user_message" autofocus placeholder="I Love Messages, Contact Me"></textarea>
                 </div>
 
                 <input id="submit" type="submit" value="Submit">
