--- a/index.html
+++ b/index.html
@@ -1,62 +1,70 @@
 <!DOCTYPE html>
 
 <html lang="en-us">
+
 <head>
 
 	<!-- Document's character set. -->
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<title>My Portfolio</title>
 	<!-- Linking CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	
-	
-	
+
+
+
 </head>
 
-<div id="allcontent">
+
+
 <body>
 
-	<div>
-		<header id=header>
-			<h1>Franklin Wilborn</h1>
+
+	<header id=header>
+		<h1>Franklin Wilborn</h1>
 		<nav>
-			
-				<a class="links" id="about"><a href="index.html">About</a>
+
+			<a class="links" id="about"><a href="index.html">About</a>
 				<a class="links" id="portfolio"><a href="portfolio.html">Portfolio</a>
-				<a class="links" id="contact"> <a href="contact.html">Contact</a>
+					<a class="links" id="contact"> <a href="contact.html">Contact</a>
 
 		</nav>
-		</header>
-	</div>
-	
+	</header>
 
-	
+
+	<div id="allcontent">
 		<section id="main-bio">
 
 			<div id="main">
-			<h2>About Me</h2>
-			<img id="bio-image" src="https://scontent.fatl1-2.fna.fbcdn.net/v/t1.0-9/10441524_10203730210753092_11146941863714294_n.jpg?_nc_cat=101&_nc_oc=AQkSUzvv8lrfcloHl5XGUtjbi3BHRuiDm7ulnC99HgE1YcA_9Yg3owNxvbG2voRN88kNqWqNuMlqGPjM3U6Hzrd8&_nc_ht=scontent.fatl1-2.fna&oh=751fe376dd892093a512297bb5587225&oe=5D521560" alt="Franklin Wilborn">
-			<p>
-				Franklin Wilborn Founded <strong>ConsumeSmarter</strong> in 2009 with a Vision of Empowering Consumers with Online Spend Management Tools.  He currently oversees the day to day operations and development of ConsumeSmarter.
-         Franklin holds a B.S. in Economics with a concentration in Finance from Emory University. His Interest include, Computer Programming, Spending Time with Family & Friends, and Showing his Beloved World-Class Rottweilers.  Franklin is from Olympia Fields, Illinois.
-			</p>
-		</div>
+				<h2>About Me</h2>
+				<img id="bio-image"
+					src="https://scontent.fatl1-2.fna.fbcdn.net/v/t1.0-9/10441524_10203730210753092_11146941863714294_n.jpg?_nc_cat=101&_nc_oc=AQkSUzvv8lrfcloHl5XGUtjbi3BHRuiDm7ulnC99HgE1YcA_9Yg3owNxvbG2voRN88kNqWqNuMlqGPjM3U6Hzrd8&_nc_ht=scontent.fatl1-2.fna&oh=751fe376dd892093a512297bb5587225&oe=5D521560"
+					alt="Franklin Wilborn">
+				<p class="content">
+					Franklin Wilborn Founded <strong>ConsumeSmarter</strong> in 2009 with a Vision of Empowering
+					Consumers with Online Spend Management Tools. He currently oversees the day to day operations and
+					development of ConsumeSmarter.
+					Franklin holds a B.S. in Economics with a concentration in Finance from Emory University. His
+					Interest include, Computer Programming, Spending Time with Family & Friends, and Showing his Beloved
+					World-Class Rottweilers. Franklin is from Olympia Fields, Illinois.
+				</p>
+			</div>
 		</section>
-		
+
 		<div>
 
-    	<section id="contacts">
-            <h2> Contact Info</h2>
+			<section id="contacts">
+				<h2> Contact Info</h2>
 
-            <ul>
-                <li><strong>Email:</strong> <a href="franklin.cfg@gmail.com">franklin.cfg@gmail.com</a> </li> 
-                <li><strong>Github:</strong> <a href="https://github.com/fwilbor">fwilbor@github.com</a> </li> 
-                <li><strong>Portfolio:</strong> <a href= "#ComingSoon">Coming Soon!</a></li>
-            </ul>
-    	</section>
+				<ul>
+					<li><strong>Email:</strong> <a href="franklin.cfg@gmail.com">franklin.cfg@gmail.com</a> </li>
+					<li><strong>Github:</strong> <a href="https://github.com/fwilbor">fwilbor@github.com</a> </li>
+					<li><strong>Portfolio:</strong> <a href="#ComingSoon">Coming Soon!</a></li>
+				</ul>
+			</section>
+		</div>
+
+		<footer id="footer">&#169; Copyright 2019 Franklin Wilborn</footer>
 	</div>
-
-	<footer id="footer">&#169; Copyright 2019 Franklin Wilborn</footer>
-</div>
 </body>
+
 </html>
