--- a/index.html
+++ b/index.html
@@ -39,14 +39,19 @@
 				<img id="bio-image"
 					src="https://scontent.fatl1-2.fna.fbcdn.net/v/t1.0-9/10441524_10203730210753092_11146941863714294_n.jpg?_nc_cat=101&_nc_oc=AQkSUzvv8lrfcloHl5XGUtjbi3BHRuiDm7ulnC99HgE1YcA_9Yg3owNxvbG2voRN88kNqWqNuMlqGPjM3U6Hzrd8&_nc_ht=scontent.fatl1-2.fna&oh=751fe376dd892093a512297bb5587225&oe=5D521560"
 					alt="Franklin Wilborn">
-				<p class="content">
-					Franklin Wilborn Founded <strong>ConsumeSmarter</strong> in 2009 with a Vision of Empowering
-					Consumers with Online Spend Management Tools. He currently oversees the day to day operations and
-					development of ConsumeSmarter.
-					Franklin holds a B.S. in Economics with a concentration in Finance from Emory University. His
-					Interest include, Computer Programming, Spending Time with Family & Friends, and Showing his Beloved
-					World-Class Rottweilers. Franklin is from Olympia Fields, Illinois.
-				</p>
+				<div>
+					<p class="content">
+						Franklin Wilborn Founded <strong>ConsumeSmarter</strong> in 2009 with a Vision of Empowering
+						Consumers with Online Spend Management Tools. He currently oversees the day to day operations
+						and
+						development of ConsumeSmarter.
+						Franklin holds a B.S. in Economics with a concentration in Finance from Emory University. His
+						Interest include, Computer Programming, Spending Time with Family & Friends, and Showing his
+						Beloved
+						World-Class Rottweilers. Franklin is from Olympia Fields, Illinois.
+					</p>
+				</div>
+
 			</div>
 		</section>
 
